[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/Components/HealthBar/HealthBarUnder.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/Components/HealthBar/HealthBarOver.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/Components/Dodge/DodgeBar.gd" type="Script" id=3]

[node name="DodgeBar" type="MarginContainer"]
offset_right = 200.0
offset_bottom = 14.0
custom_minimum_size = Vector2( 200, 0 )
script = ExtResource( 3 )

[node name="BarUnder" parent="." instance=ExtResource( 1 )]
offset_right = 200.0
offset_bottom = 14.0

[node name="BarOver" parent="." instance=ExtResource( 2 )]
offset_right = 200.0
offset_bottom = 14.0
